Fixed Calculate button Overlapping issue

--- a/src/App.css
+++ b/src/App.css
@@ -110,6 +110,7 @@ input{
     height: 40px;
 }
 
+
 /* INPUT END */
 
 /* OUTPUT START */
@@ -421,6 +422,7 @@ input{
   .button-81 {
     font-size: 1.125rem;
     padding: 1rem 2rem;
+
   }
 }
 
@@ -466,7 +468,7 @@ input{
         font-size: 2.5em;
     }
     .button-81{
-        margin-top: -4em;
+        margin-top: 0.5em;
     }
 }
 
